--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Web3 Tickets dApp</title>
+    <title>Ride Sharing dApp</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <nav id="header" class="navbar navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand">Tickets</a>
+        <a class="navbar-brand">Ride</a>
         <div id="account" class="d-flex"></div>
       </div>
     </nav>
